# byeol

./: .clang-format  .gitignore  AGENTS.md  CHANGELOGS.md  CLAUDE.md  LICENSE.md  NOTICE.md  README.md  _config.yml  codecov.yml  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-darkmode-toggle.mjs  repomix.config.json
_includes/: embed_src.html  masthead.html
_layouts/: download.html  guide.html  home.html  posts.html
cmake/: ByeolBuildInfo.cmake  ByeolDependencies.cmake
doc/: README.md
guide/: dir_5d70a24da6601672a505ee4a58a10c27.html  dir_e68e8157741866f444e17edd764ebbae.html  index.html  navtreedata.js
module/: CMakeLists.txt  clog.hpp  core.hpp  fragStacker.hpp  frontend.hpp
module/bundle/sys/: CMakeLists.txt  common.hpp  entrypoint.cpp  manifest.stela
module/bundle/sys/common/: _nout.hpp  dep.hpp
module/bundle/sys/wrapper/: wrapper.byeol
module/frontend/: CMakeLists.txt  cli.cpp  cli.hpp  common.hpp  flag.hpp  flags.hpp  frontendStacker.cpp  frontendStacker.hpp  main.cpp
module/frontend/flag/: flag.cpp  flag.hpp  flagArgs.hpp  flags.hpp  singleFlag.hpp
module/frontend/flag/flags/: bufferSrcFlag.cpp  bufferSrcFlag.hpp  dirFlag.cpp  dirFlag.hpp  fileFlag.cpp  fileFlag.hpp  helpFlag.cpp  helpFlag.hpp  logStructureFlag.cpp  logStructureFlag.hpp  verFlag.cpp  verFlag.hpp  verboseFlag.cpp  verboseFlag.hpp
module/frontend/flags/: bufferSrcFlag.cpp  bufferSrcFlag.hpp  dirFlag.cpp  dirFlag.hpp  fileFlag.cpp  fileFlag.hpp  helpFlag.cpp  helpFlag.hpp  logStructureFlag.cpp  logStructureFlag.hpp  verFlag.cpp  verFlag.hpp  verboseFlag.cpp  verboseFlag.hpp
module/test/: CMakeLists.txt  byeolE2ETest.cc  byeolE2ETest.hpp  byeolIntegTest.cc  byeolIntegTest.hpp  byeolSyntaxTest.cc  byeolSyntaxTest.hpp  byeolTest.cc  byeolTest.hpp
module/test/case/clog/: consoleStreamTest.cc
module/test/case/core/: FUOExprTest.cc  asExprTest.cc  assignExprTest.cc  blockExprTest.cc  breakExprTest.cc  bridgeTest.cc  cloneDeepTest.cc  defArrayExprTest.cc  defSeqExprTest.cc  endExprTest.cc  evalExprTest.cc  exprMakerTest.cc  exprTest.cc  frameTest.cc  funcTest.cc  funcTypeTest.cc  getExprTest.cc  getGenericExprTest.cc  immutableTest.cc  inputFuncTest.cc  manifestTest.cc  mgdObjTest.cc  modifierTest.cc  nBoolTest.cc  nIntTest.cc  narrTest.cc  nchainTest.cc  nmapTest.cc  nodeTest.cc  nseqTest.cc  ntypeTest.cc  objTest.cc  paramsTest.cc  parserTest.cc  primitiveObjTest.cc  retExprTest.cc  slotLoaderTest.cc  smultimapTest.cc  speedTest.cc  starterTest.cc  (+2 more)
module/test/case/core/syntax/: FBOExprTest.cc  FUOExprTest.cc  arrTest.cc  asExprTest.cc  assignExprTest.cc  bundlePackTest.cc  callTest.cc  commentTest.cc  defAssignExprTest.cc  defFuncTest.cc  defObjExprTest.cc  defPropExprTest.cc  endExprTest.cc  evalExprTest.cc  forExprTest.cc  genericsTest.cc  getExprTest.cc  ifExprTest.cc  isExprTest.cc  literalExprTest.cc  opTest.cc  patternMatchingTest.cc  primitiveTypeTest.cc  retExprTest.cc  runExprTest.cc  seqTest.cc  slotTest.cc  stmtChainTest.cc  stringTemplateTest.cc  whileExprTest.cc
module/test/case/frontend/: cliTest.cc
module/test/case/indep/: buildFeatureTest.cc  dlibTest.cc  fsystemTest.cc  macroTest.cc  platformAPITest.cc  tresTest.cc
module/test/case/leaf/: basicParsingTest.cc
module/test/case/memlite/: binderTest.cc  chunksTest.cc  memoryAllocRobustTest.cc  watcherTest.cc
module/test/case/meta/: rttiTest.cc  ttypeTest.cc
module/test/case/stela/: basicParsingTest.cc
module/test/common/: dep.hpp
module/test/e2e/: cliE2ETest.cc  cliTest.cc
module/test/integ/antipattern/: controlFlowAntipatternIntegTest.cc  defExprAntiTest.cc  defExprAntipatternIntegTest.cc  literalAndContainerAntipatternIntegTest.cc  literalAntiTest.cc  operatorAntipatternIntegTest.cc  syntaxAntipatternIntegTest.cc  typeAndDeclAntipatternIntegTest.cc
module/test/integ/core/: FBOExprIntegTest.cc  arrIntegTest.cc  asExprIntegTest.cc  assignExprIntegTest.cc  bundlePackIntegTest.cc  commentIntegTest.cc  defFuncIntegTest.cc  defObjExprIntegTest.cc  evalExprIntegTest.cc  forExprIntegTest.cc  mgdObjIntegTest.cc  parserIntegTest.cc  patternMatchingIntegTest.cc  primitiveTypeIntegTest.cc  retExprIntegTest.cc  starterIntegTest.cc  stmtChainIntegTest.cc  stringTemplateIntegTest.cc  whileExprIntegTest.cc
module/test/integ/core/antipattern/: arrAntiTest.cc  controlFlowAntiTest.cc  defExprAntiTest.cc  defFuncAntiTest.cc  literalAntiTest.cc  operatorAntiTest.cc  syntaxAntipatternIntegTest.cc  typeAndDeclAntiTest.cc
module/test/integ/core/usual/: FBOExprIntegTest.cc  FUOExprIntegTest.cc  arrIntegTest.cc  assignExprIntegTest.cc  bundlePackIntegTest.cc  bundlePodIntegTest.cc  callIntegTest.cc  commentIntegTest.cc  defAssignExprIntegTest.cc  defFuncIntegTest.cc  defObjExprIntegTest.cc  defPropExprIntegTest.cc  endExprIntegTest.cc  genericsIntegTest.cc  getExprIntegTest.cc  ifExprIntegTest.cc  isExprIntegTest.cc  literalExprIntegTest.cc  mgdObjIntegTest.cc  opIntegTest.cc  packIntegTest.cc  parserIntegTest.cc  podIntegTest.cc  retExprIntegTest.cc  seqIntegTest.cc  slotIntegTest.cc  speedIntegTest.cc  starterIntegTest.cc  stringTemplateIntegTest.cc  visitorIntegTest.cc
module/test/testdata/: a-main.byeol  a.byeol  b-main.byeol  b.byeol  mikes.byeol
module/test/unit/clog/: consoleStreamTest.cc
module/test/unit/core/: FUOExprTest.cc  argsTest.cc  asExprTest.cc  assignExprTest.cc  blockExprTest.cc  bridgeTest.cc  cloneDeepTest.cc  ctorTest.cc  defArrayExprTest.cc  defSeqExprTest.cc  endExprTest.cc  evalExprTest.cc  exprMakerTest.cc  exprTest.cc  forExprTest.cc  frameTest.cc  getExprTest.cc  getGenericExprTest.cc  ifExprTest.cc  manifestTest.cc  mgdObjTest.cc  nBoolTest.cc  nIntTest.cc  narrTest.cc  nchainTest.cc  nmapTest.cc  nodeTest.cc  ntypeTest.cc  packLoaderTest.cc  paramTest.cc  parserTest.cc  podLoaderTest.cc  retExprTest.cc  slotLoaderTest.cc  threadTest.cc  verifierTest.cc  visitorTest.cc
module/test/unit/frontend/: cliTest.cc
module/test/unit/indep/: fsystemTest.cc
module/test/unit/stela/: stelaTest.cc
play/: byeol-starter.js  byeol.css  byeol.html  byeol.js  home.html  index.css  index.html  (+2 more)
(+2072 files in other folders)
